# django-form-builders

./: LICENSE  README.md  boot_django.py  makemigrations.py  setup.cfg  setup.py
form_builders/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
form_builders/migrations/: 0001_initial.py
form_builders/static/form_builders/js/: main-built.js
form_builders/templates/form_builders/: index.html
form_builders/tests/: test_views.py
sample_project/: requirements.txt
sample_project/sample_project/: settings.py  urls.py
